--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --primary-purple: #6a5acd;
     --light-bg: #f0f2f5;
-    --card-bg: #fffdf5;
+    --card-bg: #ebf3ff;
     --text-color-dark: #333;
     --text-color-light: #666;
     --border-color: #e0e0e0;
@@ -21,9 +21,8 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: url(https://img.freepik.com/premium-photo/purple-purple-abstract-background-with-purple-blue-waves_337384-154100.jpg) no-repeat center center fixed;
-    background-size: 100% 100%;
-    image-resolution:  from-image;
+    background: url(https://images.unsplash.com/photo-1697463112303-cdae04af750e?q=80&w=2128&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) no-repeat center center fixed;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: flex-start; 
@@ -35,6 +34,7 @@ body {
     width: 100%;
     overflow-x: hidden;
     align-items: center;
+    font-size: large;
 }
 
 .container {
